fix <code> block overflow with scroll on the css

--- a/src/components/IssueItem.css
+++ b/src/components/IssueItem.css
@@ -1,19 +1,16 @@
 .pre {
-    
+
 }
 
 
 .issueCard {
     border: solid #D1D5DA 2px;
     width: 90vw;
-    padding-left: 2%;
+    padding: 2%;
+    overflow: scroll;
 }
 
 .issueCard img {
     max-width: 100%;
     height: auto;
-}
-
-.issueCard code {
-    overflow-wrap: break-word;
 }
